--- a/05-preliminaries-estimation.Rmd
+++ b/05-preliminaries-estimation.Rmd
@@ -90,7 +90,8 @@ trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) *
 print(trueval)
 ```
 
-- Let's perform a simulation where we draw 1000 datasets from the above distribution, and compute a g-computation estimator based on
+- Let's perform a simulation where we draw 1000 datasets from the above
+  distribution, and compute a g-computation estimator based on
 ```{r}
 gcomp <- function(y, m, a, w) {
   lm_y <- lm(y ~ m + a + w)
@@ -105,16 +106,16 @@ gcomp <- function(y, m, a, w) {
 ```
 
 ```{r}
-estimate <- numeric(1000)
-for (i in 1:1000) {
+estimate <- lapply(seq_len(1000), function(iter) {
   n <- 1000
   w <- runif(n, -1, 1)
   a <- rbinom(n, 1, pscore(w))
   m <- rbinom(n, 1, mean_m(a, w))
   y <- rnorm(n, mean_y(m, a, w))
-
-  estimate[i] <- gcomp(y, m, a, w)
-}
+  est <- gcomp(y, m, a, w)
+  return(est)
+})
+estimate <- do.call(c, estimate)
 
 hist(estimate)
 abline(v = trueval, col = "red", lwd = 4)
