--- a/06-estimation-natural-interventional.Rmd
+++ b/06-estimation-natural-interventional.Rmd
@@ -191,7 +191,7 @@ Can be computed  in the following steps:
 ```{r}
 library(mgcv)
 ## fit model for E(Y | A, W)
-b_fit <- gam(y ~ m:a + s(w, by = a)
+b_fit <- gam(y ~ m:a + s(w, by = a))
 ## fit model for P(A = 1 | M, W)
 e_fit <- gam(a ~ m + w + s(w, by = m), family = binomial)
 ## fit model for P(A = 1 | W)
@@ -234,12 +234,12 @@ q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
   \end{equation*}
   using the above predictions:
 ```{r}
-weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
+ip_weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
 ```
 
 5. Compute the uncentered EIF:
 ```{r}
-eif <- weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
+eif <- ip_weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
   q_pred
 ```
 
@@ -269,8 +269,8 @@ one_step <- function(y, m, a, w) {
   pseudo <- b1_pred - b0_pred
   q_fit <- gam(pseudo ~ a + w + s(w, by = a))
   q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
-  weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
-  eif <- weights * (y - b_pred) + (1 - a) / g0_pred *
+  ip_weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
+  eif <- ip_weights * (y - b_pred) + (1 - a) / g0_pred *
     (pseudo - q_pred) + q_pred
   return(mean(eif))
 }
@@ -289,16 +289,16 @@ print(trueval)
 
 - Bias simulation
 ```{r}
-estimate <- numeric(1000)
-for (i in 1:1000) {
+estimate <- lapply(seq_len(1000), function(iter) {
   n <- 1000
   w <- runif(n, -1, 1)
   a <- rbinom(n, 1, pscore(w))
   m <- rbinom(n, 1, mean_m(a, w))
   y <- rnorm(n, mean_y(m, a, w))
-
-  estimate[i] <- one_step(y, m, a, w)
-}
+  estimate <- one_step(y, m, a, w)
+  return(estimate)
+})
+estimate <- do.call(c, estimate)
 
 hist(estimate)
 abline(v = trueval, col = "red", lwd = 4)
