nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -206,7 +206,7 @@
 
 \title{{[}SER 2021 Workshop{]} Causal Mediation: Modern Methods for Path Analysis}
 \author{Iván Díaz, Nima Hejazi, Kara Rudolph}
-\date{updated: May 15, 2021}
+\date{updated: May 16, 2021}
 
 \begin{document}
 \maketitle
@@ -356,6 +356,38 @@ and the complete source is available on
 \href{https://github.com/tlverse/tlverse-handbook}{GitHub}. This version of the book
 was built with R version 4.0.5 (2021-03-31), \href{https://pandoc.org/}{pandoc} version \passthrough{\lstinline!r rmarkdown::pandoc\_version()!}, and the following packages:
 
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+package & version & source\tabularnewline
+\midrule
+\endhead
+bookdown & 0.21.11 & Github (rstudio/bookdown@33c4f70)\tabularnewline
+bslib & 0.2.4.9003 & Github (rstudio/bslib@e09af88)\tabularnewline
+dagitty & 0.3-1 & CRAN (R 4.0.5)\tabularnewline
+data.table & 1.14.0 & CRAN (R 4.0.5)\tabularnewline
+downlit & 0.2.1 & CRAN (R 4.0.5)\tabularnewline
+dplyr & 1.0.6 & CRAN (R 4.0.5)\tabularnewline
+ggdag & 0.2.3 & CRAN (R 4.0.5)\tabularnewline
+ggfortify & 0.4.11 & CRAN (R 4.0.5)\tabularnewline
+ggplot2 & 3.3.3 & CRAN (R 4.0.5)\tabularnewline
+kableExtra & 1.3.4 & CRAN (R 4.0.5)\tabularnewline
+knitr & 1.32 & CRAN (R 4.0.5)\tabularnewline
+magick & 2.7.1 & CRAN (R 4.0.5)\tabularnewline
+medoutcon & 0.1.5 & Github (nhejazi/medoutcon@39820e2)\tabularnewline
+medshift & 0.1.4 & Github (nhejazi/medshift@f9e11a9)\tabularnewline
+mvtnorm & 1.1-1 & CRAN (R 4.0.5)\tabularnewline
+origami & 1.0.3 & CRAN (R 4.0.5)\tabularnewline
+pdftools & 2.3.1 & CRAN (R 4.0.5)\tabularnewline
+readr & 1.4.0 & CRAN (R 4.0.5)\tabularnewline
+rmarkdown & 2.7.11 & Github (rstudio/rmarkdown@e340d75)\tabularnewline
+skimr & 2.1.3 & CRAN (R 4.0.5)\tabularnewline
+sl3 & 1.4.3 & Github (tlverse/sl3@5cddc6c)\tabularnewline
+stringr & 1.4.0 & CRAN (R 4.0.5)\tabularnewline
+tibble & 3.1.1 & CRAN (R 4.0.5)\tabularnewline
+tidyr & 1.1.3 & CRAN (R 4.0.5)\tabularnewline
+\bottomrule
+\end{longtable}
+
 \hypertarget{setup}{%
 \section{Setup instructions}\label{setup}}
 
@@ -497,6 +529,14 @@ Data}.
 
 Do differences in the effects of treatment (comparing two medications for opioid use disorder, naltrexone vs buprenorphine) on risk of relapse operate through mediators of adherence, opioid use, pain, and depressive symptoms? \citep{rudolph2020explaining}
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag} 
+
+}
+
+\end{figure}
+
 \hypertarget{what-is-causal-mediation-analysis}{%
 \section{What is causal mediation analysis?}\label{what-is-causal-mediation-analysis}}
 
@@ -555,7 +595,7 @@ Do differences in the effects of treatment (comparing two medications for opioid
 \end{itemize}
 
 \begin{lstlisting}[language=R]
-n <- 1e7
+n <- 1e6
 w <- rnorm(n)
 a <- rbinom(n, 1, 0.5)
 z <- rbinom(n, 1, 0.2 * a + 0.3)
@@ -577,6 +617,8 @@ lm_y <- lm(y ~ m + a + w + z)
 lm_m <- lm(m ~ a + w + z)
 ## product of coefficients
 coef(lm_y)[2] * coef(lm_m)[2]
+#>          m 
+#> -0.0014835
 \end{lstlisting}
 
 Among other things, in this workshop:
@@ -598,8 +640,26 @@ types of graph:
 \hypertarget{no-intermediate-confounders}{%
 \subsection{No intermediate confounders}\label{no-intermediate-confounders}}
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-4-1} 
+
+}
+
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-4}
+\end{figure}
+
 \hypertarget{intermediate-confounders}{%
 \subsection{Intermediate confounders}\label{intermediate-confounders}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{01-preface_files/figure-latex/unnamed-chunk-5-1} 
+
+}
+
+\caption{Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-5}
+\end{figure}
 
 The above graphs can be interpreted as a \emph{non-parametric structural equation model}
 (NPSEM), also known as \emph{structural causal model} (SCM):
@@ -698,6 +758,15 @@ The above graphs can be interpreted as a \emph{non-parametric structural equatio
   Interventional direct and indirect effects
 \end{itemize}
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-1-1} 
+
+}
+
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\end{figure}
+
 \hypertarget{controlled-direct-effects}{%
 \section{Controlled direct effects}\label{controlled-direct-effects}}
 
@@ -711,6 +780,14 @@ The above graphs can be interpreted as a \emph{non-parametric structural equatio
 \end{itemize}
 
 \[\psi_{\text{CDE}} = \E(Y_{1,m} - Y_{0,m}) \]
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4a3} 
+
+}
+
+\end{figure}
 
 \hypertarget{identification-assumptions}{%
 \subsection{Identification assumptions:}\label{identification-assumptions}}
@@ -792,6 +869,7 @@ pred_y0 <- predict(lm_y, newdata = data.frame(a = 0, m = 0, w = w))
 \begin{lstlisting}[language=R]
 ## CDE at m = 0
 mean(pred_y1 - pred_y0)
+#> [1] 1.0009
 \end{lstlisting}
 
 \hypertarget{is-this-the-estimand-i-want}{%
@@ -845,6 +923,14 @@ Still using the same DAG as above,
   Interpreted as \emph{the outcome for an individual in a hypothetical world where
   treatment was given but the mediator was held at the value it would have
   taken under no treatment}
+
+  \begin{figure}
+
+  {\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4a} 
+
+  }
+
+  \end{figure}
 \item
   Recall that, because of the definition of counterfactuals
   \begin{equation*}
@@ -1007,6 +1093,7 @@ lm_pseudo <- lm(pseudo ~ a + w)
 pred_pseudo <- predict(lm_pseudo, newdata = data.frame(a = 0, w = w))
 ## NDE:
 mean(pred_pseudo)
+#> [1] 0.99655
 \end{lstlisting}
 
 \hypertarget{is-this-the-estimand-i-want-1}{%
@@ -1027,6 +1114,23 @@ mean(pred_pseudo)
 
 \emph{What if our data structure involves a post-treatment confounder of the
 mediator-outcome relationship (e.g., adherence)?}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{02-effects-def_files/figure-latex/unnamed-chunk-12-1} 
+
+}
+
+\caption{Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-12}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag} 
+
+}
+
+\end{figure}
 
 \hypertarget{unidentifiability-of-the-nde-and-nie-in-this-setting}{%
 \subsection{Unidentifiability of the NDE and NIE in this setting}\label{unidentifiability-of-the-nde-and-nie-in-this-setting}}
@@ -1110,6 +1214,14 @@ intervention.
   We gain in the ability to solve a problem, but lose in terms of interpretation
   of the causal effect (cannot decompose the ATE)
 \end{itemize}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/graphic4b} 
+
+}
+
+\end{figure}
 
 \hypertarget{an-alternative-definition-of-the-effects}{%
 \subsection{An alternative definition of the effects:}\label{an-alternative-definition-of-the-effects}}
@@ -1229,6 +1341,7 @@ pred_pseudo <- predict(fit_pseudo, data.frame(a = 0, w = w))
 \begin{lstlisting}[language=R]
 ## Mean(Y(1, G(0)))
 mean(pred_pseudo)
+#> [1] 1.1979
 \end{lstlisting}
 
 \begin{itemize}
@@ -1265,6 +1378,14 @@ mean(pred_pseudo)
 \hypertarget{estimand-summary}{%
 \section{Estimand Summary}\label{estimand-summary}}
 
+\begin{figure}
+
+{\centering \includegraphics[width=1.25\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/table1} 
+
+}
+
+\end{figure}
+
 \hypertarget{stochastic}{%
 \chapter{Stochastic Direct and Indirect Effects}\label{stochastic}}
 
@@ -1272,6 +1393,15 @@ mean(pred_pseudo)
 \section{Definition of the effects}\label{definition-of-the-effects}}
 
 Consider the following directed acyclic graph.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{03-stochastic_files/figure-latex/unnamed-chunk-1-1} 
+
+}
+
+\caption{Directed acyclic graph under no intermediate confounders of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\end{figure}
 
 \hypertarget{motivation-for-stochastic-interventions}{%
 \section{Motivation for stochastic interventions}\label{motivation-for-stochastic-interventions}}
@@ -1562,12 +1692,16 @@ plot(pscore, pscore_delta, xlab = 'Observed prop. score',
 abline(0, 1)
 \end{lstlisting}
 
+\begin{center}\includegraphics[width=0.8\linewidth]{03-stochastic_files/figure-latex/unnamed-chunk-7-1} \end{center}
+
 \hypertarget{what-are-the-odds-of-exposure-under-intervention-vs-real-world}{%
 \section{What are the odds of exposure under intervention vs real world?}\label{what-are-the-odds-of-exposure-under-intervention-vs-real-world}}
 
 \begin{lstlisting}[language=R]
 odds <- (pscore_delta / (1 - pscore_delta)) / (pscore / (1 - pscore))
 summary(odds)
+#>    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#>       2       2       2       2       2       2
 \end{lstlisting}
 
 \begin{itemize}
@@ -1590,6 +1724,7 @@ indirect <- pseudo_a1 * pscore_delta + pseudo_a0 * (1 - pscore_delta)
 \begin{lstlisting}[language=R]
 ## E[Y(Adelta) - Y(Adelta, M)]
 mean(indirect)
+#> [1] 0.1091
 \end{lstlisting}
 
 \begin{itemize}
@@ -1607,6 +1742,7 @@ mean(indirect)
 direct <- (pred_y1_a1 - y) * pscore_delta +
        (pred_y1_a0 - y) * (1 - pscore_delta)
 mean(direct)
+#> [1] 0.10934
 \end{lstlisting}
 
 \hypertarget{summary}{%
@@ -1648,8 +1784,24 @@ mean(direct)
 \hypertarget{comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud}{%
 \section{Comparative effectivness of two medications for opioid use disorder (OUD)}\label{comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud}}
 
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/ctndag} 
+
+}
+
+\end{figure}
+
 \emph{Motivation}: Opposite overall treatment effects for homeless versus
 nonhomeless participants.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{/home/runner/work/ser2021_mediation_workshop/ser2021_mediation_workshop/img/tmleesttotal} 
+
+}
+
+\end{figure}
 
 \hypertarget{getting-specific-about-the-question}{%
 \subsection{Getting specific about the question}\label{getting-specific-about-the-question}}
@@ -1918,12 +2070,14 @@ trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) *
   mean_m(0, w_big) + (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) *
     (1 - mean_m(0, w_big)))
 print(trueval)
+#> [1] 0.58048
 \end{lstlisting}
 
 \begin{itemize}
 \tightlist
 \item
-  Let's perform a simulation where we draw 1000 datasets from the above distribution, and compute a g-computation estimator based on
+  Let's perform a simulation where we draw 1000 datasets from the above
+  distribution, and compute a g-computation estimator based on
 \end{itemize}
 
 \begin{lstlisting}[language=R]
@@ -1940,20 +2094,22 @@ gcomp <- function(y, m, a, w) {
 \end{lstlisting}
 
 \begin{lstlisting}[language=R]
-estimate <- numeric(1000)
-for (i in 1:1000) {
+estimate <- lapply(seq_len(1000), function(iter) {
   n <- 1000
   w <- runif(n, -1, 1)
   a <- rbinom(n, 1, pscore(w))
   m <- rbinom(n, 1, mean_m(a, w))
   y <- rnorm(n, mean_y(m, a, w))
-
-  estimate[i] <- gcomp(y, m, a, w)
-}
+  est <- gcomp(y, m, a, w)
+  return(est)
+})
+estimate <- do.call(c, estimate)
 
 hist(estimate)
 abline(v = trueval, col = "red", lwd = 4)
 \end{lstlisting}
+
+\begin{center}\includegraphics[width=0.8\linewidth]{05-preliminaries-estimation_files/figure-latex/unnamed-chunk-4-1} \end{center}
 
 \begin{itemize}
 \tightlist
@@ -1985,6 +2141,8 @@ text(450, 0.01, paste0(
   mean(lower < trueval & trueval < upper), "%"
 ), cex = 1.2)
 \end{lstlisting}
+
+\begin{center}\includegraphics[width=0.8\linewidth]{05-preliminaries-estimation_files/figure-latex/unnamed-chunk-5-1} \end{center}
 
 \hypertarget{pros-and-cons-of-g-computation-with-data-adaptive-regression}{%
 \subsection{Pros and cons of g-computation with data-adaptive regression}\label{pros-and-cons-of-g-computation-with-data-adaptive-regression}}
@@ -2067,6 +2225,15 @@ loss based estimation.
 \section{Natural direct effect}\label{natural-direct-effect}}
 
 Recall:
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{06-estimation-natural-interventional_files/figure-latex/unnamed-chunk-1-1} 
+
+}
+
+\caption{Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment}\label{fig:unnamed-chunk-1}
+\end{figure}
 
 \begin{itemize}
 \item
@@ -2223,7 +2390,7 @@ Can be computed in the following steps:
 \begin{lstlisting}[language=R]
 library(mgcv)
 ## fit model for E(Y | A, W)
-b_fit <- gam(y ~ m:a + s(w, by = a)
+b_fit <- gam(y ~ m:a + s(w, by = a))
 ## fit model for P(A = 1 | M, W)
 e_fit <- gam(a ~ m + w + s(w, by = m), family = binomial)
 ## fit model for P(A = 1 | W)
@@ -2287,7 +2454,7 @@ q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
 \end{enumerate}
 
 \begin{lstlisting}[language=R]
-weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
+ip_weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
 \end{lstlisting}
 
 \begin{enumerate}
@@ -2299,7 +2466,7 @@ weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
 \end{enumerate}
 
 \begin{lstlisting}[language=R]
-eif <- weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
+eif <- ip_weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
   q_pred
 \end{lstlisting}
 
@@ -2314,6 +2481,7 @@ eif <- weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
 \begin{lstlisting}[language=R]
 ## One-step estimator
 mean(eif)
+#> [1] 0.55085
 \end{lstlisting}
 
 \hypertarget{performance-of-the-one-step-estimator-in-a-small-simulation-study}{%
@@ -2338,8 +2506,8 @@ one_step <- function(y, m, a, w) {
   pseudo <- b1_pred - b0_pred
   q_fit <- gam(pseudo ~ a + w + s(w, by = a))
   q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
-  weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
-  eif <- weights * (y - b_pred) + (1 - a) / g0_pred *
+  ip_weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
+  eif <- ip_weights * (y - b_pred) + (1 - a) / g0_pred *
     (pseudo - q_pred) + q_pred
   return(mean(eif))
 }
@@ -2358,6 +2526,7 @@ w_big <- runif(1e6, -1, 1)
 trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) * mean_m(0, w_big) +
   (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) * (1 - mean_m(0, w_big)))
 print(trueval)
+#> [1] 0.58061
 \end{lstlisting}
 
 \begin{itemize}
@@ -2367,20 +2536,22 @@ print(trueval)
 \end{itemize}
 
 \begin{lstlisting}[language=R]
-estimate <- numeric(1000)
-for (i in 1:1000) {
+estimate <- lapply(seq_len(1000), function(iter) {
   n <- 1000
   w <- runif(n, -1, 1)
   a <- rbinom(n, 1, pscore(w))
   m <- rbinom(n, 1, mean_m(a, w))
   y <- rnorm(n, mean_y(m, a, w))
-
-  estimate[i] <- one_step(y, m, a, w)
-}
+  estimate <- one_step(y, m, a, w)
+  return(estimate)
+})
+estimate <- do.call(c, estimate)
 
 hist(estimate)
 abline(v = trueval, col = "red", lwd = 4)
 \end{lstlisting}
+
+\begin{center}\includegraphics[width=0.8\linewidth]{06-estimation-natural-interventional_files/figure-latex/unnamed-chunk-11-1} \end{center}
 
 \begin{itemize}
 \tightlist
@@ -2413,6 +2584,8 @@ text(450, 0.01, paste0(
 ), cex = 1.2)
 \end{lstlisting}
 
+\begin{center}\includegraphics[width=0.8\linewidth]{06-estimation-natural-interventional_files/figure-latex/unnamed-chunk-12-1} \end{center}
+
 \hypertarget{estimating-indirect-effects-with-r-packages}{%
 \chapter{\texorpdfstring{Estimating (in)direct effects with \texttt{R} packages}{Estimating (in)direct effects with R packages}}\label{estimating-indirect-effects-with-r-packages}}
 
@@ -2442,7 +2615,22 @@ set.seed(429153)
 # load and examine data
 data(weight_behavior)
 dim(weight_behavior)
+#> [1] 691  15
 head(weight_behavior)
+#>      bmi  age sex  race numpeople car gotosch snack tvhours cmpthours cellhours
+#> 1 18.207 12.2   F OTHER         5   3       2     1       4         0         0
+#> 2 22.784 12.8   M OTHER         4   3       2     1       4         2         0
+#> 3 19.607 12.6   F OTHER         4   2       4     2      NA        NA        NA
+#> 4 25.568 12.1   M OTHER         2   3       2     1       0         2         0
+#> 5 15.074 12.3   M OTHER         4   1       2     1       2         1         3
+#> 6 22.983 11.8   M OTHER         4   1       1     1       4         3         2
+#>   sports exercises sweat overweigh
+#> 1      2         2     1         0
+#> 2      1         8     2         0
+#> 3   <NA>         4     2         0
+#> 4      2         9     1         1
+#> 5      1        12     1         0
+#> 6      1         1     1         0
 \end{lstlisting}
 
 The documentation for the data set describes it as a ``database obtained from the
@@ -2457,6 +2645,31 @@ the time being. Note that in a real data analysis, we might consider strategies
 to fully make of the observed data, perhaps by imputing missing values. For now,
 we simply remove the incomplete observations, resulting in a data set with fewer
 observations but much the same structure as the original:
+
+\begin{lstlisting}[language=R]
+# remove missing values
+is_na <- unique(do.call(c, apply(apply(weight_behavior, 2, is.na), 2, which)))
+weight_behavior_complete <- weight_behavior[-is_na, ]
+weight_behavior_complete$sports <-
+  as.numeric(weight_behavior_complete$sports) - 1
+dim(weight_behavior_complete)
+#> [1] 567  15
+head(weight_behavior_complete)
+#>      bmi  age sex  race numpeople car gotosch snack tvhours cmpthours cellhours
+#> 1 18.207 12.2   F OTHER         5   3       2     1       4         0         0
+#> 2 22.784 12.8   M OTHER         4   3       2     1       4         2         0
+#> 4 25.568 12.1   M OTHER         2   3       2     1       0         2         0
+#> 5 15.074 12.3   M OTHER         4   1       2     1       2         1         3
+#> 6 22.983 11.8   M OTHER         4   1       1     1       4         3         2
+#> 8 19.157 12.1   F OTHER         3   3       2     1       0         0         1
+#>   sports exercises sweat overweigh
+#> 1      1         2     1         0
+#> 2      0         8     2         0
+#> 4      1         9     1         1
+#> 5      0        12     1         0
+#> 6      0         1     1         0
+#> 8      0         1     3         0
+\end{lstlisting}
 
 For the analysis of this observational data set, we focus on the effect of
 participating in a sports team (\passthrough{\lstinline!sports!}) on the BMI of children (\passthrough{\lstinline!bmi!}), taking
@@ -2885,6 +3098,13 @@ Now, let's take a quick look at our simulated data:
 \begin{lstlisting}[language=R]
 # quick look at the data
 head(example_data)
+#>    W_1 W_2 W_3 A Z M Y
+#> 1:   0   0   1 0 0 0 1
+#> 2:   0   1   1 0 0 0 1
+#> 3:   1   1   0 0 1 1 1
+#> 4:   1   0   1 0 1 0 0
+#> 5:   0   0   0 1 1 1 1
+#> 6:   1   0   1 1 0 1 1
 \end{lstlisting}
 
 As noted above, all covariates in our dataset are binary; however, note that
@@ -3046,10 +3266,10 @@ tmle_de <- medoutcon(
 summary(tmle_de)
 \end{lstlisting}
 
-Here, we recall that the TML
-estimator generally exhibits better finite-sample performance than the one-step
-estimator \citep{vdl2011targeted, vdl2018targeted}, so the TML estimate is likely to
-be more reliable in modest (realistic) sample sizes.
+Here, we recall that the TML estimator generally exhibits better finite-sample
+performance than the one-step estimator \citep{vdl2011targeted, vdl2018targeted}, so
+the TML estimate is likely to be more reliable in modest (realistic) sample
+sizes.
 
 \hypertarget{estimating-the-indirect-effect}{%
 \subsubsection{Estimating the indirect effect}\label{estimating-the-indirect-effect}}
