--- a/index.Rmd
+++ b/index.Rmd
@@ -63,17 +63,23 @@ parameter estimable from the observed data distribution). Familiarity with the
 
 ## Workshop schedule {#schedule}
 
-* 10:00A-10:30A: introductions/mediation set up <!-- Ivan-->
-* 10:30A-11:15A: controlled direct effects, natural direct and indirect effects,
-  interventional direct and indirect effects <!-- Kara-->
-* 11:15A-11:45A: stochastic mediation estimands <!-- Nima-->
-* 11:45A-12:00P: how to choose an estimand in real-world examples <!-- Kara-->
-* 12:00P-12:15P break/discussion
-* 12:15P-12:45P: what is the EIF <!-- Ivan-->
-* 12:45P-01:00P: using the EIF for estimating the natural direct
-  effect <!-- Ivan-->
-* 01:00P-01:45P: practice: `R` code for estimation <!-- Nima-->
-* 01:45P-02:00P: Wrap-up
+* 09:00A-09:30A: Introductions + mediation set-up
+  <!-- Ivan-->
+* 09:30A-10:15A: Controlled direct effects, natural direct/indirect effects,
+  interventional direct/indirect effects
+  <!-- Kara-->
+* 10:15A-10:45A: Stochastic mediation estimands
+  <!-- Nima-->
+* 10:45A-11:00A: Choosing an estimand in real-world examples
+  <!-- Kara-->
+* 11:00A-11:15A: Break + discussion
+* 11:15A-11:45A: What is the EIF?!
+  <!-- Ivan-->
+* 11:45A-12:00P: Using the EIF for estimating the natural direct effect
+  <!-- Ivan-->
+* 12:00P-12:45P: Example walkthrough with `R` packages for effect estimation
+  <!-- Nima-->
+* 12:45P-01:00P: Wrap-up
 
 __NOTE: All times listed in Pacific Time.__
 
@@ -174,7 +180,7 @@ interactive. You need to install R before you install RStudio.
 * Once it's installed, open RStudio to make sure it works and you don't get any
   error messages.
 
-#### macOS / Mac OS X
+#### Mac OSX
 
 ##### If you already have R and RStudio installed
 
@@ -189,8 +195,7 @@ interactive. You need to install R before you install RStudio.
 
 ##### If you don't have R and RStudio installed
 
-* Download R from
-  the [CRAN website](http://cran.r-project.org/bin/macosx).
+* Download R from the [CRAN website](http://cran.r-project.org/bin/macosx).
 * Select the `.pkg` file for the latest R version
 * Double click on the downloaded file to install R
 * It is also a good idea to install [XQuartz](https://www.xquartz.org/) (needed
@@ -205,13 +210,13 @@ interactive. You need to install R before you install RStudio.
 
 #### Linux
 
-* Follow the instructions for your distribution
-  from [CRAN](https://cloud.r-project.org/bin/linux), they provide information
-  to get the most recent version of R for common distributions. For most
-  distributions, you could use your package manager (e.g., for Debian/Ubuntu run
-  `sudo apt-get install r-base`, and for Fedora `sudo yum install R`), but we
-  don't recommend this approach as the versions provided by this are
-  usually out of date. In any case, make sure you have at least R 3.3.1.
+* Follow the instructions for your distribution from
+  [CRAN](https://cloud.r-project.org/bin/linux), they provide information to get
+  the most recent version of R for common distributions. For most distributions,
+  you could use your package manager (e.g., for Debian/Ubuntu run `sudo apt-get
+  install r-base`, and for Fedora `sudo yum install R`), but we don't recommend
+  this approach as the versions provided by this are usually out of date. In any
+  case, make sure you have at least R 3.3.1.
 * Go to the [RStudio download
   page](https://www.rstudio.com/products/rstudio/download/#download)
 * Under *Installers* select the version that matches your distribution, and
@@ -223,3 +228,45 @@ interactive. You need to install R before you install RStudio.
 These setup instructions are adapted from those written for [Data Carpentry: R
 for Data Analysis and Visualization of Ecological
 Data](http://www.datacarpentry.org/R-ecology-lesson/).
+
+### Virtual Enironment setup with `renv` {#renv}
+
+These instructions are intended to help with setting up the included [`renv`
+virtual environment](https://rstudio.github.io/renv/index.html), which ensures
+all participants are using the same exact set of `R` packages (and package
+versions). A few important notes to keep in mind:
+
+* When `R` is started from the top level of this repository, `renv` is
+  activated automatically. There is no further action required on your part. If
+  `renv` is not installed, it will be installed automatically, assuming that you
+  have an active internet connection.
+* While `renv` is active, the `R` session will only have access to the packages
+  (and their dependencies) that are listed in the `renv.lock` file -- that is,
+  you should not expect to have access to any other `R` packages that may be
+  installed elsewhere on the computing system in use.
+* Upon an initial attempt, `renv` will prompt you to install packages listed in
+  the `renv.lock` file, by printing a message like the following:
+```{r, eval=FALSE}
+# * Project 'PATH/TO/ser2021_mediation_workshop' loaded. [renv 0.13.2]
+# * The project may be out of sync -- use `renv::status()` for more details.
+> renv::status()
+# The following package(s) are recorded in the lockfile, but not installed:
+# Use `renv::restore()` to install these packages.
+```
+In any such case, please call `renv::restore()` to install any missing packages.
+Note that you do _not_ need to manually install the packages via
+`install.packages()`, `remotes::install_github()`, or similar.
+
+For details on how the `renv` system works, the following references may be
+helpful:
+
+1. [Collaborating with
+    `renv`](https://rstudio.github.io/renv/articles/collaborating.html)
+2. [Introduction to `renv`](https://rstudio.github.io/renv/articles/renv.html)
+
+In some rare cases, `R` packages that `renv` automatically tries to install as
+part of the `renv::restore()` process may fail due to missing systems-level
+dependencies. In such cases, a reference to the missing dependencies and
+system-specific instructions their installation involving, e.g., [Ubuntu
+Linux's `apt`](http://manpages.ubuntu.com/manpages/bionic/man8/apt.8.html) or
+[`homebrew` for macOS](https://brew.sh/), will usually be displayed.
