finish updating medshift

--- a/book.bib
+++ b/book.bib
@@ -1,6 +1,9 @@
 @article{rudolph2020explaining,
-  title={Explaining differential effects of medication for opioid use disorder using a novel approach incorporating mediating variables},
-  author={Rudolph, Kara and Diaz, Ivan and Hejazi, Nima and van der Laan, Mark and Luo, Sean and Shulman, Matisyahu and Campbell, Aimee and Rotrosen, John and Nunes, Edward},
+  title={Explaining differential effects of medication for opioid use disorder
+    using a novel approach incorporating mediating variables},
+  author={Rudolph, Kara and Diaz, Ivan and Hejazi, Nima and {van der Laan},
+    Mark and Luo, Sean and Shulman, Matisyahu and Campbell, Aimee and Rotrosen,
+    John and Nunes, Edward},
   journal={Addiction},
   year={2020},
   publisher={Wiley Online Library}
@@ -57,7 +60,8 @@
 @article{diaz2020causal,
   title={Causal mediation analysis for stochastic interventions},
   author={D{\'\i}az, Iv{\'a}n and Hejazi, Nima S},
-  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical
+    Methodology)},
   volume={82},
   number={3},
   pages={661--683},
@@ -840,4 +844,68 @@ year = "2014"
   year={2016},
   publisher={Annual Reviews}
 }
+
+@manual{hejazi2021medoutcon,
+  author={Hejazi, Nima S and D{\'\i}az, Iv{\'a}n and Rudolph, Kara E},
+  title = {{medoutcon}: Efficient causal mediation analysis under
+    intermediate confounding},
+  year  = {2021},
+  url = {https://github.com/nhejazi/medoutcon},
+  note = {R package version 0.1.5}
+}
+
+@manual{hejazi2020medshift,
+  author = {Hejazi, Nima S and D{\'\i}az, Iv{\'a}n},
+  title = {{medshift}: Causal mediation analysis for stochastic
+    interventions},
+  year  = {2020},
+  url = {https://github.com/nhejazi/medshift},
+  note = {R package version 0.1.4}
+}
+
+@article{hejazi2020txshift-joss,
+  author = {Hejazi, Nima S and Benkeser, David C},
+  title = {{txshift}: Efficient estimation of the causal effects of
+    stochastic interventions in {R}},
+  year  = {2020},
+  doi = {10.21105/joss.02447},
+  url = {https://10.21105.joss.02447},
+  journal = {Journal of Open Source Software},
+  publisher = {The Open Journal}
+}
+
+@manual{hejazi2020txshift-rpkg,
+  author = {Hejazi, Nima S and Benkeser, David C},
+  title = {{txshift}: Efficient Estimation of the Causal Effects of
+    Stochastic Interventions},
+  year  = {2020},
+  doi = {10.5281/zenodo.4070042},
+  url = {https://CRAN.R-project.org/package=txshift},
+  note = {R package version 0.3.4}
+}
+
+@manual{coyle2021sl3,
+  author = {Coyle, Jeremy R and Hejazi, Nima S and Malenica, Ivana and
+    Sofrygin, Oleg},
+  title = {{sl3}: Modern Pipelines for Machine Learning and {Super
+    Learning}},
+  year = {2021},
+  howpublished = {\url{https://github.com/tlverse/sl3}},
+  note = {{R} package version 1.4.2},
+  url = {https://doi.org/10.5281/zenodo.1342293},
+  doi = {10.5281/zenodo.1342293}
+}
+
+@book{vdl2022targeted,
+  doi = {},
+  url = {https://tlverse.org/tlverse-handbook},
+  year = {2022},
+  publisher = {CRC Press},
+  author = {{van der Laan}, Mark J and Coyle, Jeremy R and Hejazi, Nima S and
+    Malenica, Ivana and Phillips, Rachael V and Hubbard, Alan E},
+  title = {{Targeted Learning in \texttt{R}: Causal Data Science with the
+    \texttt{tlverse} Software Ecosystem}},
+  note = {in preparation}
+}
+
 
