--- a/book.bib
+++ b/book.bib
@@ -908,4 +908,51 @@ year = "2014"
   note = {in preparation}
 }
 
+@article{diaz2020nonparametric,
+  title={Non-parametric efficient causal mediation with intermediate
+    confounders},
+  author={D{\'\i}az, Iv{\'a}n and Hejazi, Nima S and Rudolph, Kara E and {van
+    der Laan}, Mark J},
+  year={2020},
+  url = {https://arxiv.org/abs/1912.09936},
+  doi = {10.1093/biomet/asaa085},
+  journal={Biometrika},
+  volume={},
+  number={},
+  pages={},
+  publisher={Oxford University Press}
+}
+
+@article{klaassen1987consistent,
+  title={Consistent estimation of the influence function of locally
+    asymptotically linear estimators},
+  author={Klaassen, Chris AJ},
+  journal={The Annals of Statistics},
+  pages={1548--1562},
+  year={1987},
+  publisher={JSTOR}
+}
+
+@incollection{zheng2011cross,
+  title={Cross-validated targeted minimum-loss-based estimation},
+  author={Zheng, Wenjing and {van der Laan}, Mark J},
+  booktitle={Targeted Learning},
+  pages={459--474},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{chernozhukov2018double,
+  author = {Chernozhukov, Victor and Chetverikov, Denis and Demirer, Mert and
+    Duflo, Esther and Hansen, Christian and Newey, Whitney and Robins, James},
+  title = {Double/debiased machine learning for treatment and structural
+    parameters},
+  journal = {The Econometrics Journal},
+  volume = {21},
+  number = {1},
+  year = {2018},
+  month = {01},
+  doi = {10.1111/ectj.12097},
+  url = {https://doi.org/10.1111/ectj.12097}
+}
 
